Added Virtual env and installation packages

--- a/Red-Teaming-of-llm-application.ipynb
+++ b/Red-Teaming-of-llm-application.ipynb
@@ -9,11 +9,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1d655716",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "493d9ed6",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### We need to load the key from environment variable and set into openai. You will get this key while registering with OPENAI."
+    "#create the python virtual env\n",
+    "\n",
+    "#python3 -m venv llm\n",
+    "#source llm/bin/activate\n",
+    "\n",
+    "#Once activate install the below packages\n",
+    "#pip install openai\n",
+    "#pip install langchain\n",
+    "#pip install \"giskard[llm]\" --upgrade\n",
+    "#pip install chromadb\n",
+    "#pip install beautifulsoup4"
    ]
   },
   {
