--- a/Red-Teaming-of-llm-application.ipynb
+++ b/Red-Teaming-of-llm-application.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14385791",
+   "metadata": {},
+   "source": [
+    "## Giskard provides open source python library which automate the scan of LLM application with different prompt injections to find the vulnerabilities. Giskard maintains the Prompt injection library and keep up to date with latest research. It is kind of LLM vulnerabilities scanner library which run different prompt techniques with specialized test, analyse the result and publish the report."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86f579df",
+   "metadata": {},
+   "source": [
+    "### You need to install below required python library to run the code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "493d9ed6",
@@ -26,6 +42,14 @@
     "#pip install \"giskard[llm]\" --upgrade\n",
     "#pip install chromadb\n",
     "#pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27840212",
+   "metadata": {},
+   "source": [
+    "### Import all the required classes and helper functions which are required in our short app."
    ]
   },
   {
@@ -50,6 +74,14 @@
     "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1683b231",
+   "metadata": {},
+   "source": [
+    "### Create a small LLM application called LLM RAG BOT. It is RAG based application which reads one of my article from Medium and return the answer. I will not go through each and every step of RAG application if you want to understand more you can refer my artical Get Insight from your Business Data - using RAG."
    ]
   },
   {
@@ -112,6 +144,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afa50bed",
+   "metadata": {},
+   "source": [
+    "### Test our LLM RAG BOT app by asking one simple question."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d91425bc",
@@ -119,6 +159,14 @@
    "outputs": [],
    "source": [
     "llm_rag_bot.invoke(\"Who is written Get Insight from your Business Data — Build LLM application article?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3589d8fb",
+   "metadata": {},
+   "source": [
+    "### Do some manual Red Teaming to break our LLM RAG BOT app. We can use technique called \"Exploiting text completion\". We can ask bot something which Bot are not supposed to answer."
    ]
   },
   {
@@ -154,6 +202,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb200e88",
+   "metadata": {},
+   "source": [
+    "### Lets do Red teaming testing using Giskard. We need to first wrap our LLM RAG BOT app into standardised format. We will have a method which take pandas data frame as an input parameter. This method will iterate through data frames and invoke our LLM RAG BOT app with input parameter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "58c05eef",
@@ -173,6 +229,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26208752",
+   "metadata": {},
+   "source": [
+    "### As a second step, create Giskard model by passing \"model_predict\" function as well as other meta data like name and description of the Bot."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ef425ecf",
@@ -186,6 +250,14 @@
     "    description=\"This Bot retruns the answer based on artical on medium written on LLM\",\n",
     "    feature_names=[\"question\"],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55987135",
+   "metadata": {},
+   "source": [
+    "### Create a small dataset for testing our LLM RAG BOT app using Giskard."
    ]
   },
   {
@@ -208,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "078ced0f",
+   "metadata": {},
+   "source": [
+    "### Test if wrapped model works."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a147c017",
@@ -216,6 +296,14 @@
    "source": [
     "predict = giskard_model.predict(llm_dataset)\n",
     "print(predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e81b845",
+   "metadata": {},
+   "source": [
+    "### Run Giskard scanner to find the vulnerabilities. Giskard's scan will generate an automatic report about the model vulnerabilities. While doing the scanning, we can specify what classes of model vulnerabilities, such as harmfulness, hallucination, prompt injection etc. The scan will use a mixture of tests from predefined set of examples, heuristics, and LLM-based generations and evaluations. I will limiting the analysis to the jailbreak category to save time and money. Note - If you face any issues related SSL certificate please run additional two lines."
    ]
   },
   {
@@ -238,6 +326,14 @@
    "source": [
     "\n",
     "report = giskard.scan(giskard_model, llm_dataset, only=\"jailbreak\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a83eda",
+   "metadata": {},
+   "source": [
+    "### We can see the report."
    ]
   },
   {
